# xbuffy

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.cclient  README.imap  XBuffy.ad  acconfig.h  acinclude.m4  aclocal.m4  boxfile.c  boxfile.fmt  config.h.in  configure  configure.ac  configure.in  fmt_rfc2047.c  header_cmp.c  imap.c  nntp.c  patchlevel.h  realfrom.c  remfirstwd.c  strdup.c  strncasecmp.c  xbuffy.1  xbuffy.c  xbuffy.h  xbuffy.spec
libdyn/: Makefile.am  Makefile.in  dyn.h  dynP.h  dyn_append.c  dyn_delete.c  dyn_insert.c  dyn_put.c
